events-on-fire 1.2.2
====================

Fixed invocation of three-parameter event handler methods.
Added fireOnKeyStroke methods to SwingEvents.

events-on-fire 1.2.1
====================

Fixed binding to class producers.

events-on-fire 1.2
==================

The event annotations can now be customized. Added the 
@PooledEventHandler annotation replacing the pooled flag of the
default @EventHandler annotation and the @SwingEventHandler
annotation, calling the handler method by using the Swing event 
handler thread.  

Added tags as additional parameter (varargs). The tags can be
checked using the annotations. It is now possible to create
event handler methods without parameters, just watching the
specified tags.

Added an AWTEvents and a SwingEvents class, providing predefined
Action-, Change- and SelectionListeners. These listeners fire 
the events they get.

events-on-fire 1.1
==================

The bind and unbind methods now support bindings to class objects. 
In case of bindings to a class object, the consumer is notified
on any event that was fired by a producer that is an instance of
the specified class (e.g. if a consumer is bonded to the Object.class
it will be notified by any event it can handle).

events-on-fire 1.0
==================

Initial version. Supports basic operations like bind, unbind and fire.
Has basic support for error handlers and pooled executors. 